admin/src/components/routes/ActionWrapper/Action.css
/* ... */
.action .mappings .mapping .inputProperty .propertyIcon sl-icon.isIdentifierIcon {
	color: var(--sl-color-neutral-500);
	font-size: 19px;
}

.action .mappings .mapping .outputProperty {
	margin-left: var(--mapping-indentation);
	position: relative;
}

/* The output property must be disabled to avoid tab focus but it must not
inherit the disabled style */
.action .mappings .mapping .outputProperty[disabled]::part(base) {
	cursor: default;
	background-color: transparent !important;
	border: 0 !important;
	opacity: 1 !important;
}

.action .mappings .mapping .outputProperty.indented::before {
	content: '';
	display: block;
	position: absolute;
	left: 15px;
	width: 15px;
	height: 15px;
	border-left: 3px solid var(--sl-color-neutral-400);
	border-bottom: 3px solid var(--sl-color-neutral-400);
	top: 40%;
	transform: translateY(-50%) translate(-30px);
	border-bottom-left-radius: 5px;
}

.action .switchToTransformationDropdown sl-menu-item::part(label) {
	font-size: 13px;
	display: flex;
	gap: 5px;
	align-items: center;
}

.action .switchToTransformationDropdown sl-menu-item img {
	max-width: 23px;
	max-height: 23px;
	pointer-events: none;
}

.sectionActions,
.sectionActions sl-menu {
	width: 300px;
}

.sectionActions sl-dropdown,
.sectionActions sl-button,
.sectionActions sl-dropdown::part(popup) {
	width: 100%;
}

.action .transformation .languageDeprecatedAlert {
	margin-top: 15px;
}

.action .transformation .languageDeprecatedAlert::part(base) {
	background-color: transparent;
	border: 0;
	color: var(--sl-color-neutral-600);
}

.action .transformation .languageDeprecatedAlert::part(icon) {
	padding: 0;
	padding-right: 10px;
}

.action .transformation .languageDeprecatedAlert::part(message) {
	padding: 0;
}

.action .transformation .languageDeprecatedAlert sl-icon {
	color: var(--sl-color-danger-600);
}

.action .fullscreenTransformation {
	position: fixed;
	left: 0;
	top: 90px;
	width: 100%;
	height: calc(100% - 90px);
	visibility: hidden;
	opacity: 0;
	transform: scale(0);
	margin: 0;
	transition:
		visibility 0.5s,
		opacity 0.5s;
	background-color: var(--bg-primary);
}

.action .fullscreenTransformation.isOpen {
	transition:
		visibility 0.5s,
		opacity 0.5s,
		transform 0.5s;
	visibility: visible;
	opacity: 1;
	transform-origin: bottom center;
	transform: scale(1);
}

.action .fullscreenTransformation sl-split-panel {
	height: 100%;
}

.action .fullscreenTransformation .panelTitleWrapper {
	background-color: var(--bg-gray);
	height: 60px;
	border-top: 1px solid var(--border-primary);
	border-bottom: 2px solid var(--border-primary);
	padding: 15px 20px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: sticky;
	top: 0;
	z-index: 10;
	gap: 10px;
}

.action .fullscreenTransformation .property {
	border-bottom: 1px solid var(--border-primary);
	padding: 12px 20px;
	position: relative;
	user-select: none;
}

.action .fullscreenTransformation .property:last-child {
	border-bottom: 0;
}

.action .fullscreenTransformation .property .name {
	font-family: monospace;
	width: fit-content;
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 3px;
}

.action .fullscreenTransformation .property .name .label {
	margin-left: 3px;
	font-size: 13px;
	opacity: 0.7;
	font-family: monospace;
}

.action .fullscreenTransformation .property .type {
	opacity: 0.7;
	font-size: 13px;
	font-family: monospace;
}

.action .fullscreenTransformation .property sl-icon {
	cursor: pointer;
	transition: transform 0.3s;
	color: var(--sl-color-neutral-400);
	font-size: 13px;
}

.action .fullscreenTransformation .property .requiredIcon {
	color: var(--sl-color-danger-500);
	font-size: 9px;
	margin-right: 5px;
}

.action .fullscreenTransformation .property .identifierIcon {
	color: var(--sl-color-neutral-500);
	font-size: 19px;
}

.action .fullscreenTransformation .property.expand > .parentProperty > sl-icon {
	transform: rotate(90deg);
}

.action .fullscreenTransformation .property .parentProperty {
	display: flex;
	align-items: center;
	gap: 8px;
}

.action .fullscreenTransformation .property .parentProperty > .property {
	padding: 0;
	width: 100%;
}

.action .fullscreenTransformation .property .subProperties .property {
	border: 0;
	padding: 10px 20px 5px 45px;
}

.action .fullscreenTransformation .property .copyProperty {
	position: relative;
	left: 2px;
	color: var(--sl-color-neutral-500);
	font-size: 14px;
}

.action .fullscreenTransformation .property .copyProperty::part(copy-icon),
.action
	.fullscreenTransformation
	.property.expand:hover
	> .parentProperty
	> .property
	> .name
	> .copyProperty::part(copy-icon) {
	visibility: hidden;
}

.action .fullscreenTransformation .property:hover > .name > .copyProperty::part(copy-icon) {
	visibility: visible !important;
}

.action
	.fullscreenTransformation
	.property:hover
	> .parentProperty
	> .property
	> .name
	> .copyProperty::part(copy-icon)
	.action
	.fullscreenTransformation
	.property
	> .parentProperty:hover
	> .property
	> .name
	> .copyProperty::part(copy-icon) {
	visibility: visible;
}

.action .fullscreenTransformation .leftPanel {
	position: relative;
	max-height: 100%;
	overflow: auto;
}

.action .fullscreenTransformation .inputPanel,
.action .fullscreenTransformation .outputPanel {
	max-height: 100%;
	overflow: hidden;
}

.action .fullscreenTransformation .inputPanel .panelContent,
.action .fullscreenTransformation .outputPanel .panelContent {
	height: calc(100% - 60px);
	overflow-y: scroll;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(base) {
	border: 0 !important;
	border-radius: 0 !important;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(header) {
	padding: 0;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(summary-icon) {
	display: none;
}
/* ... */

